--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/slider": "4.5.2",
     "@react-navigation/bottom-tabs": "^6.6.1",
@@ -17,9 +18,11 @@
     "@shopify/react-native-skia": "1.2.3",
     "eas-cli": "^14.7.1",
     "expo": "~51.0.28",
+    "expo-av": "~14.0.7",
     "expo-dev-client": "~4.0.29",
     "expo-device": "~6.0.2",
     "expo-linear-gradient": "~13.0.2",
+    "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
