--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.1",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/slider": "4.5.2",
@@ -21,6 +22,7 @@
     "expo-av": "~14.0.7",
     "expo-dev-client": "~4.0.29",
     "expo-device": "~6.0.2",
+    "expo-keep-awake": "~13.0.2",
     "expo-linear-gradient": "~13.0.2",
     "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
